# Oasis

./: .gitignore  CMakeLists.txt  Oasis.vcxproj  Oasis.vcxproj.filters  OasisTest.cpp
Source/Headers/: Camera.h  GraphicalObject.h  IOModel.h  InputManager.h  Light.h  Model.h  RealTimePlot.h  RenderSystem.h  Shader.h  Texture.h
Source/Oasis/: Camera.cpp  GraphicalObject.cpp  IOModel.cpp  InputManager.cpp  Model.cpp  RealTimePlot.cpp  RenderSystem.cpp  Shader.cpp  Texture.cpp
Source/Shaders/: PointShader.fs  PointShader.vs  PointShader3D.fs  PointShader3D.vs  Shader.fs  Shader.vs  SimpleShader.fs  SimpleShader.vs
